--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<body>
 		<nav>
 			<section> 
-				<img src="http://bpsc.teletalk.com.bd/commomfiles/bd_logo.png" alt="Bangladesh Logo" class="logo">
+				<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/8/84/Government_Seal_of_Bangladesh.svg/1200px-Government_Seal_of_Bangladesh.svg.png" alt="Bangladesh Logo" class="logo">
 			</section>
 			<section>
 				<h4>Government of the People's Republic of Bangladesh</h4>
@@ -51,7 +51,7 @@
 			<p> &copy 2025 BPSC, Bangladesh Public Service Commission, All Rights Reserved.</p>
 			<div class="power">
 				<p>powered by</p>
-				<img src="http://bpsc.teletalk.com.bd/commomfiles/tbl_logo.jpg">
+				<img src="https://www.logo.wine/a/logo/TeleTalk/TeleTalk-Logo.wine.svg">
 			</div>
 		</footer>
 	
