Update image size

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 			<p> &copy 2025 BPSC, Bangladesh Public Service Commission, All Rights Reserved.</p>
 			<div class="power">
 				<p>powered by</p>
-				<img src="https://www.logo.wine/a/logo/TeleTalk/TeleTalk-Logo.wine.svg">
+				<img src="https://www.logo.wine/a/logo/TeleTalk/TeleTalk-Logo.wine.svg" height="50px" width="100px">
 			</div>
 		</footer>
 	
