--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 			<div class="notice" id="bcs47">
 			<a href="http://bpsc.teletalk.com.bd/bcs47" > <i class="fa-solid fa-chevron-right"></i> Online Application for 47th BCS Examination 2024</a>
 			</div>
-			<div class="notice">
+			<div class="notice" id="noncad">
 			<a href="http://bpsc.teletalk.com.bd/bcs46"> <i class="fa-solid fa-chevron-right"></i> Online Application for 46th BCS Examination 2023</a>
 			</div>
 			<div class="notice">
